--- a/styles.css
+++ b/styles.css
@@ -208,6 +208,7 @@ body {
   text-align: center;
   padding-top: 30px;
   font-size: 20px;
+  padding-left: 150px;
 }
 #error-message i {
   font-size: 30px;
@@ -216,7 +217,8 @@ body {
 #recipes-container {
   padding-top: 90px;
   display: flex;
-  width: 100%;
+  width: 96%;
+  height: 50%;
   flex-wrap: wrap;
   justify-content: start;
   gap: 50px;
@@ -225,7 +227,7 @@ body {
 .background_picture {
   object-fit: cover;
   width: 100%;
-  height: 178px;
+  height: 128px;
   border-radius: 5px 5px 0 0;
 }
 
@@ -243,7 +245,7 @@ body {
   background-color: #e7e7e7;
   margin-top: -3px;
   border-radius: 0 0 5px 5px;
-  padding: 20px 20px 0px 20px;
+  padding: 5px 10px 0px 10px;
   min-height: 180px;
   max-height: 180px;
 }
@@ -272,14 +274,17 @@ body {
   font-size: 12px;
 }
 .recipe--information--text_instructions {
-  display: inline;
-  margin: unset;
-  font-size: 12px;
-  overflow: hidden;
-  overflow-wrap: break-word;
-  max-height: 120px;
-  text-overflow: ellipsis;
-  padding-left: 10px;
+    display: inline;
+    margin: unset;
+    margin-top: -10px;
+    font-size: 11px;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    max-height: 120px;
+    max-width: 120px;
+    height: 110px;
+    text-overflow: ellipsis;
+    padding-left: 10px;
 }
 
 .hidden {
@@ -290,18 +295,94 @@ body {
   display: none;
 }
 
-@media (max-width: 1472px) {
+@media (min-width: 1501px) {
   .recipe {
     max-width: unset;
-    min-width: 380px;
-    width: 47%;
+    min-width: unset;
+    width: 31%;
+  }
+
+  .recipe--information--text {
+    margin-right: unset;
+    margin-top: 20px;
+    display: flex;
+    /*justify-content: space-around;*/
   }
 }
-@media (max-width: 1050px) {
+@media (max-width: 1499px) {
+  #recipes-container {
+    justify-content: space-between;
+    gap: 40px 0;
+  }
+
   .recipe {
     max-width: unset;
-    min-width: 380px;
+    min-width: unset;
+    width: 32%;
+    justify-content: space-between;
+  }
+
+  .recipe--information--text {
+    margin-right: unset;
+    margin-top: 20px;
+    display: flex;
+    /*justify-content: space-around;*/
+  }
+}
+@media (max-width: 990px) {
+  .recipe {
+    max-width: unset;
+    min-width: unset;
     width: 100%;
+  }
+
+  .recipe--information--text {
+    margin-right: unset;
+   /* margin-top: 0px;*/
+    display: flex;
+    padding-left: 70px;
+    /*justify-content: space-around;*/
+  }
+
+  .recipe--information_name {
+    display: inline;
+    margin: unset;
+    font-size: 13px;
+  }
+
+  .recipe--information--text_list {
+    margin: unset;
+    min-width: 161px;
+    display: inline;
+    padding-left: unset;
+    list-style-type: none;
+    font-size: 10px;
+  }
+
+  .recipe--information {
+    background-color: #e7e7e7;
+    margin-top: -3px;
+    border-radius: 0 0 5px 5px;
+    padding: 20px 20px 0px 20px;
+    /*min-height: 180px;*/
+    /*max-height: 180px;*/
+  }
+
+  #dropDownMenus-container {
+    flex-direction: column;
+    position: relative;
+  }
+
+  .dropDownMenus--chevronDown {
+    color: #fff;
+    z-index: 9;
+    position: initial;
+    display: block;
+    float: right;
+    right: 4px;
+    top: 30px;
+    cursor: pointer;
+    height: 20px;
   }
 }
 
